Fixes metadata alignment to be closer to picture

--- a/app/assets/stylesheets/images.css
+++ b/app/assets/stylesheets/images.css
@@ -7,3 +7,7 @@
   height: 150px;
   display: block;
 }
+
+.document-metadata > .col-md-10 {
+  margin-left: -125px;
+}
